<resources version="1.0" encoding="UTF-8">
    <!--Name of the app-->
    <string name="app_name">GroceryList</string>

    <!--Title of the MainActivity-->
    <string name="mainactiviy_title">My List</string>

    <!--Title of the AddItemActivity-->
    <string name="additemactivity_title">Add Item</string>

    <!--Name of the settings menu-->
    <string name="action_settings">Settings</string>

    <!--Layout Strings-->
        <!--activity_add_item Strings-->
    <string name="edit_text_name">Name</string>
    <string name="discription_produce">Produce</string>
    <string name="discription_meat">Meat</string>
    <string name="discription_dariy">Dairy</string>
    <string name="discription_frozen">Frozen</string>
    <string name="discription_grocery">Grocery</string>
    <string name="discription_other">Other</string>

    <string name="delete">delete</string>
</resources>
