<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joematte.grocerylist.AddItemActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/edit_text_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:srcCompat="@color/colorPrimaryDark"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="83dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <Button
                    android:id="@+id/produceB"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="@string/discription_produce"
                    android:onClick="anyButtonCkick"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/dairyB"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cream"
                    android:text="@string/discription_dariy"
                    android:onClick="anyButtonCkick"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/groceryB"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:text="@string/discription_grocery"
                    android:onClick="anyButtonCkick"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <Button
                    android:id="@+id/frozenB"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:text="@string/discription_frozen"
                    android:onClick="anyButtonCkick"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/meatB"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/darkRed"
                    android:text="@string/discription_meat"
                    android:onClick="anyButtonCkick"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/extraB"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:text="@string/discription_extra"
                    android:onClick="anyButtonCkick"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/radioGrouplinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
            tools:layout_editor_absoluteY="111dp">

            <RadioGroup
                android:id="@+id/pdgRG"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/produceRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:theme="@style/RadioStyle" />

                <RadioButton
                    android:id="@+id/dairyRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:theme="@style/RadioStyle" />

                <RadioButton
                    android:id="@+id/groceryRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:theme="@style/RadioStyle" />
            </RadioGroup>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="49"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="360dp" />

            <RadioGroup
                android:id="@+id/fmeRG"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/frozenRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:theme="@style/RadioStyle" />

                <RadioButton
                    android:id="@+id/meatRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:theme="@style/RadioStyle" />

                <RadioButton
                    android:id="@+id/extraRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:theme="@style/RadioStyle" />
            </RadioGroup>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="49" />
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:srcCompat="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/b_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="addItemButtonClick"
        android:text="@string/additemactivity_title"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:text="@string/additemactivity_title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
